fix dark mode

--- a/napa-solution/public/css/common.css
+++ b/napa-solution/public/css/common.css
@@ -1940,17 +1940,16 @@ button:focus {
   display: flex;
   flex-direction: column;
   align-items: left;
-  margin: 50px 100px 0px 180px;
+  margin: 100px 100px 80px 180px;
   position: relative;
 }
 
 .cover>svg {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 20px;
   transform: translate(-90px, -20%);
-  /* height: 54px;
-  width: auto; */
+  width: 50px;
 }
 
 .cover>h3 {
@@ -1963,22 +1962,31 @@ button:focus {
 }
 
 .cover>p {
-  margin-bottom: 130px;
-
   text-align: left;
-  font: normal normal normal 26px/40px Noto Sans JP;
+  font-size: 26px;
   letter-spacing: 0.78px;
   color: #9e9e9e;
   opacity: 1;
+  border-bottom: 1px solid #c8b8f4;
+  padding-bottom: 40px;
 }
 
 @media (max-width: 768px) {
+  .devider {
+    margin: 20px 0 40px 0 !important;
+  }
+
   .cover>svg {
     display: none;
   }
 
+  .policy-content {
+    margin-bottom: 20px;
+    font-size: 14px;
+  }
+
   .cover {
-    margin: 30px 24px;
+    margin: 100px 24px 30px;
   }
 
   .cover>h3 {
@@ -1991,13 +1999,9 @@ button:focus {
   }
 
   .cover>p {
-    text-align: left;
-    font: normal normal normal 16px/40px Roboto;
-    letter-spacing: 0.48px;
-    color: #9e9e9e;
-    opacity: 1;
-
+    font-size: 16px;
     margin-bottom: 24px;
+    padding-bottom: 20px;
   }
 }
 
