--- a/napa-solution/public/css/company-profile.css
+++ b/napa-solution/public/css/company-profile.css
@@ -31,7 +31,7 @@
 }
 
 .wrapper-head {
-  padding-bottom: 30px;
+  padding-bottom: 80px;
   padding: 0px 5%;
 }
 
