--- a/napa-solution/public/css/privacy-policy.css
+++ b/napa-solution/public/css/privacy-policy.css
@@ -6,7 +6,7 @@
   margin-bottom: 80px;
 }
 .policy{
-  margin-top: 80px;
+  margin-top: 120px;
   text-align: left;
   font: normal normal normal 16px/30px Noto Sans JP;
   letter-spacing: 0px;
@@ -23,7 +23,7 @@
   margin-bottom: 30px;
 }
 .p-contact{
-  margin: 100px 0px 40px 0px;
+  margin: 50px 0px 40px 0px;
   font: normal normal bold 20px/30px Noto Sans JP !important;
   color: #6C3AF5 !important;
 }
